--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Price Tag Generator</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -19,14 +20,37 @@
       font-size: 10px;
       box-sizing: border-box;
       page-break-inside: avoid;
-      position: relative;
+      display: flex;
+      flex-direction: row;
+    }
+    .qr-area {
+      width: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     .qr {
-      position: absolute;
-      top: 2px;
-      right: 2px;
       width: 35px;
       height: 35px;
+    }
+    .text-area {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+      font-family: 'Ma Shan Zheng', cursive;
+    }
+    .item-desc {
+      font-size: 14px;
+      font-weight: bold;
+    }
+    .item-name {
+      font-size: 12px;
+    }
+    .item-price {
+      font-size: 14px;
+      font-weight: bold;
     }
     #tagContainer {
       display: flex;
@@ -88,10 +112,14 @@
         const tag = document.createElement('div');
         tag.className = 'tag';
         tag.innerHTML = `
-          <div><strong>${name}</strong></div>
-          <div>${desc}</div>
-          <div><strong>${price}</strong></div>
-          <div id="qr-${idx}" class="qr"></div>
+          <div class="qr-area">
+            <div id="qr-${idx}" class="qr"></div>
+          </div>
+          <div class="text-area">
+            <div class="item-desc">${desc}</div>
+            <div class="item-name">${name}</div>
+            <div class="item-price">${price}</div>
+          </div>
         `;
 
         container.appendChild(tag);
