--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Price Tag Generator</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&family=Comic+Neue&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -39,16 +39,18 @@
       flex-direction: column;
       justify-content: center;
       text-align: center;
-      font-family: 'Ma Shan Zheng', cursive;
     }
     .item-desc {
+      font-family: 'Ma Shan Zheng', cursive;
       font-size: 14px;
       font-weight: bold;
     }
     .item-name {
+      font-family: 'Comic Neue', cursive;
       font-size: 12px;
     }
     .item-price {
+      font-family: 'Comic Neue', cursive;
       font-size: 14px;
       font-weight: bold;
     }
