--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>Price Tag Generator</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&family=Comic+Neue&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Yomogi&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Yomogi', cursive;
       margin: 20px;
     }
     .tag {
@@ -41,17 +41,17 @@
       text-align: center;
     }
     .item-desc {
-      font-family: 'Ma Shan Zheng', cursive;
+      font-family: 'Yomogi', cursive;
       font-size: 14px;
       font-weight: bold;
     }
     .item-name {
-      font-family: 'Comic Neue', cursive;
+      font-family: 'Yomogi', cursive;
       font-size: 12px;
     }
     .item-price {
-      font-family: 'Comic Neue', cursive;
-      font-size: 14px;
+      font-family: 'Yomogi', cursive;
+      font-size: 12px;
       font-weight: bold;
     }
     #tagContainer {
