--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Price Tag Generator</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Yomogi&display=swap" rel="stylesheet">
   <style>
     body {
@@ -39,19 +41,20 @@
       flex-direction: column;
       justify-content: center;
       text-align: center;
+      gap: 0px;
     }
     .item-desc {
       font-family: 'Yomogi', cursive;
-      font-size: 14px;
+      font-size: 13px;
       font-weight: bold;
     }
     .item-name {
-      font-family: 'Yomogi', cursive;
-      font-size: 12px;
+      font-family: Arial, sans-serif;
+      font-size: 10px;
     }
     .item-price {
-      font-family: 'Yomogi', cursive;
-      font-size: 12px;
+      font-family: Arial, sans-serif;
+      font-size: 10px;
       font-weight: bold;
     }
     #tagContainer {
@@ -60,15 +63,22 @@
       gap: 5px;
       padding: 10px;
     }
+    button {
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
   <h2>Upload Excel File</h2>
   <input type="file" id="excelFile" accept=".xlsx, .xls">
+  <button id="downloadBtn">Download as PDF</button>
   <div id="tagContainer"></div>
 
   <script>
     document.getElementById('excelFile').addEventListener('change', handleFile, false);
+    document.getElementById('downloadBtn').addEventListener('click', downloadPDF);
+
+    let currentData = [];
 
     function handleFile(event) {
       const file = event.target.files[0];
@@ -86,6 +96,7 @@
           const json = XLSX.utils.sheet_to_json(firstSheet, { defval: "" });
 
           console.log("Parsed data:", json);
+          currentData = json;
           displayTags(json);
         } catch (err) {
           console.error("Error reading Excel file:", err);
@@ -126,7 +137,6 @@
 
         container.appendChild(tag);
 
-        // Generate QR
         new QRCode(document.getElementById(`qr-${idx}`), {
           text: code,
           width: 35,
@@ -134,6 +144,23 @@
           correctLevel: QRCode.CorrectLevel.L
         });
       });
+    }
+
+    async function downloadPDF() {
+      const { jsPDF } = window.jspdf;
+      const pdf = new jsPDF({ orientation: 'portrait', unit: 'mm', format: [40, 12] });
+      const tags = document.querySelectorAll('.tag');
+
+      for (let i = 0; i < tags.length; i++) {
+        const tag = tags[i];
+        const canvas = await html2canvas(tag, { scale: 4 });
+        const imgData = canvas.toDataURL('image/png');
+
+        if (i !== 0) pdf.addPage([40, 12], 'portrait');
+        pdf.addImage(imgData, 'PNG', 0, 0, 40, 12);
+      }
+
+      pdf.save('price_tags.pdf');
     }
   </script>
 </body>
