--- a/index.html
+++ b/index.html
@@ -1,176 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Price Tag Generator</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Yomogi&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Yomogi&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: 'Yomogi', cursive;
-      margin: 20px;
-      background-color: #555;
+      font-family: 'Yomogi', sans-serif;
+      background-color: #999;
+      margin: 0;
+      padding: 1rem;
+    }
+    #tag-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
     }
     .tag {
-      width: 40mm;
-      height: 12mm;
-      padding: 2px;
-      font-size: 10px;
+      width: 378px;
+      height: 113px;
+      background: white;
+      padding: 4px;
       box-sizing: border-box;
-      page-break-inside: avoid;
+      position: relative;
       display: flex;
       flex-direction: row;
-      background-color: white;
-    }
-    .qr-area {
-      width: 12mm;
-      display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
     }
     .qr {
-      width: 10mm;
-      height: 10mm;
+      width: 35px;
+      height: 35px;
+      margin-right: 8px;
     }
-    .text-area {
+    .text {
       flex: 1;
       display: flex;
       flex-direction: column;
       justify-content: center;
       text-align: center;
-      gap: 0px;
     }
-    .item-desc {
-      font-family: 'Yomogi', cursive;
-      font-size: 13px;
-      font-weight: bold;
+    .description {
+      font-size: 14px;
+      font-weight: normal;
     }
-    .item-name {
+    .name {
       font-family: Arial, sans-serif;
-      font-size: 10px;
+      font-size: 11px;
     }
-    .item-price {
+    .price {
       font-family: Arial, sans-serif;
       font-size: 12px;
       font-weight: bold;
     }
-    #tagContainer {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 5px;
-      padding: 10px;
-    }
-    button {
-      margin-top: 10px;
+    @media (max-width: 600px) {
+      .tag {
+        transform: scale(0.9);
+        transform-origin: top left;
+      }
     }
   </style>
 </head>
 <body>
-  <h2>Upload Excel File</h2>
-  <input type="file" id="excelFile" accept=".xlsx, .xls">
-  <button id="downloadBtn">Download as PDF</button>
-  <div id="tagContainer"></div>
+  <input type="file" id="fileInput" accept=".xlsx, .xls" />
+  <button onclick="downloadPDF()">Download PDF</button>
+  <div id="tag-container"></div>
 
+  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
   <script>
-    document.getElementById('excelFile').addEventListener('change', handleFile, false);
-    document.getElementById('downloadBtn').addEventListener('click', downloadPDF);
+    const fileInput = document.getElementById("fileInput");
+    const container = document.getElementById("tag-container");
 
-    let currentData = [];
+    fileInput.addEventListener("change", async (e) => {
+      const file = e.target.files[0];
+      if (!file) return;
 
-    function handleFile(event) {
-      const file = event.target.files[0];
-      if (!file) {
-        alert("No file selected.");
-        return;
-      }
-      const reader = new FileReader();
+      const data = await file.arrayBuffer();
+      const workbook = XLSX.read(data);
+      const sheet = workbook.Sheets[workbook.SheetNames[0]];
+      const rows = XLSX.utils.sheet_to_json(sheet);
 
-      reader.onload = function (e) {
-        try {
-          const data = new Uint8Array(e.target.result);
-          const workbook = XLSX.read(data, { type: 'array' });
-          const firstSheet = workbook.Sheets[workbook.SheetNames[0]];
-          const json = XLSX.utils.sheet_to_json(firstSheet, { defval: "" });
+      container.innerHTML = "";
+      for (let row of rows) {
+        const itemCode = row["Item Code (O)"] || "";
+        const description = row["Item Description (O)"] || "";
+        const itemName = row["Item Name (R)"] || "";
+        const price = row["Sell Price (R)"] || "";
 
-          console.log("Parsed data:", json);
-          currentData = json;
-          displayTags(json);
-        } catch (err) {
-          console.error("Error reading Excel file:", err);
-          alert("Failed to read Excel file. Check the format.");
-        }
-      };
+        const tag = document.createElement("div");
+        tag.className = "tag";
 
-      reader.readAsArrayBuffer(file);
-    }
+        const qrCanvas = document.createElement("canvas");
+        const qr = new QRious({
+          element: qrCanvas,
+          value: itemCode,
+          size: 140,
+          level: 'H'
+        });
+        qrCanvas.className = "qr";
 
-    function displayTags(data) {
-      const container = document.getElementById('tagContainer');
-      container.innerHTML = '';
-
-      if (!data || !Array.isArray(data)) {
-        console.error("Invalid data format");
-        return;
-      }
-
-      data.forEach((row, idx) => {
-        const code = row["Item Code (O)"] || '';
-        const name = row["Item Name (R)"] || '';
-        const desc = row["Item Description (O)"] || '';
-        const price = row["Sell Price (R)"] !== undefined ? `RM ${row["Sell Price (R)"]}` : '';
-
-        const tag = document.createElement('div');
-        tag.className = 'tag';
-        tag.innerHTML = `
-          <div class="qr-area">
-            <canvas id="qr-${idx}" class="qr"></canvas>
-          </div>
-          <div class="text-area">
-            <div class="item-desc">${desc}</div>
-            <div class="item-name">${name}</div>
-            <div class="item-price">${price}</div>
-          </div>
+        const textDiv = document.createElement("div");
+        textDiv.className = "text";
+        textDiv.innerHTML = `
+          <div class="description">${description}</div>
+          <div class="name">${itemName}</div>
+          <div class="price">RM ${price}</div>
         `;
 
+        tag.appendChild(qrCanvas);
+        tag.appendChild(textDiv);
         container.appendChild(tag);
-
-        const qrCanvas = document.getElementById(`qr-${idx}`);
-        const qr = new QRCode(document.createElement('div'), {
-          text: code,
-          width: 400,
-          height: 400,
-          correctLevel: QRCode.CorrectLevel.L
-        });
-
-        const qrImg = qr._el.querySelector('img');
-        qrImg.onload = () => {
-          const ctx = qrCanvas.getContext('2d');
-          qrCanvas.width = 40;
-          qrCanvas.height = 40;
-          ctx.drawImage(qrImg, 0, 0, 40, 40);
-        };
-      });
-    }
+      }
+    });
 
     async function downloadPDF() {
       const { jsPDF } = window.jspdf;
-      const pdf = new jsPDF({ orientation: 'landscape', unit: 'mm', format: [40, 12] });
-      const tags = document.querySelectorAll('.tag');
+      const pdf = new jsPDF({ unit: "mm", format: [40, 12], orientation: "landscape" });
+      const tags = document.querySelectorAll(".tag");
 
       for (let i = 0; i < tags.length; i++) {
-        const tag = tags[i];
-        const canvas = await html2canvas(tag, { scale: 4 });
-        const imgData = canvas.toDataURL('image/png');
-
-        if (i !== 0) pdf.addPage([40, 12], 'landscape');
-        pdf.addImage(imgData, 'PNG', 0, 0, 40, 12);
+        const canvas = await html2canvas(tags[i], { scale: 2 });
+        const imgData = canvas.toDataURL("image/png");
+        if (i > 0) pdf.addPage([40, 12], 'landscape');
+        pdf.addImage(imgData, "PNG", 0, 0, 40, 12);
+        await new Promise(resolve => requestAnimationFrame(resolve));
       }
 
-      pdf.save('price_tags.pdf');
+      pdf.save("tags.pdf");
     }
   </script>
 </body>
