--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       justify-content: flex-start;
     }
     .qr {
-      width: 35px;
-      height: 35px;
+      width: 110px;
+      height: 110px;
       margin-right: 8px;
     }
     .text {
@@ -42,16 +42,17 @@
       text-align: center;
     }
     .description {
-      font-size: 14px;
+      font-size: 38px;
       font-weight: normal;
+      font-weight: bold;
     }
     .name {
       font-family: Arial, sans-serif;
-      font-size: 11px;
+      font-size: 25px;
     }
     .price {
       font-family: Arial, sans-serif;
-      font-size: 12px;
+      font-size: 25px;
       font-weight: bold;
     }
     @media (max-width: 600px) {
