--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       text-align: center;
     }
     .description {
+      font-family: 'Yomogi', sans-serif;
       font-size: 38px;
       font-weight: normal;
       font-weight: bold;
