--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
     .tag {
       width: 378px;
-      height: 113px;
+      height: 120px;
       background: white;
       padding: 4px;
       box-sizing: border-box;
@@ -28,6 +28,8 @@
       flex-direction: row;
       align-items: center;
       justify-content: flex-start;
+      margin-top: 0px;    
+      margin-bottom: 0px; 
     }
     .qr {
       width: 110px;
@@ -46,15 +48,20 @@
       font-size: 38px;
       font-weight: normal;
       font-weight: bold;
+      margin-top: 0px;    
+      margin-bottom: 0px; 
     }
     .name {
       font-family: Arial, sans-serif;
-      font-size: 25px;
+      font-size: 27px;
+      margin-top: -5px; 
+      margin-bottom: 5px; 
     }
     .price {
       font-family: Arial, sans-serif;
-      font-size: 25px;
+      font-size: 27px;
       font-weight: bold;
+      margin-bottom: 8px; 
     }
     @media (max-width: 600px) {
       .tag {
